StereoKitC/stereokit.h


typedef int32_t bool32_t;
typedef enum display_mode_ {
	display_mode_mixedreality     = 0,
	display_mode_flatscreen       = 1,
	display_mode_none             = 2,
} display_mode_;
typedef enum depth_mode_ {
	depth_mode_balanced           = 0,
	depth_mode_d16,
	depth_mode_d32,
	depth_mode_stencil,
} depth_mode_;
typedef enum display_ {
	display_none                  = 0,
	display_opaque                = 1 << 0,
	display_additive              = 1 << 1,
	display_blend                 = 1 << 2,
	display_passthrough           = 1 << 2,
	display_any_transparent       = display_additive | display_blend,
} display_;
typedef enum display_blend_ {
	display_blend_none            = 0,
	display_blend_opaque          = 1 << 0,
	display_blend_additive        = 1 << 1,
	display_blend_blend           = 1 << 2,
	display_blend_any_transparent = display_blend_additive | display_blend_blend,
} display_blend_;
typedef enum log_ {
	log_none                      = 0,
	log_diagnostic,
	log_inform,
	log_warning,
	log_error
} log_;
typedef enum render_layer_ {
	render_layer_0                = 1 << 0,
	render_layer_1                = 1 << 1,
	render_layer_2                = 1 << 2,
	render_layer_3                = 1 << 3,
	render_layer_4                = 1 << 4,
	render_layer_5                = 1 << 5,
	render_layer_6                = 1 << 6,
	render_layer_7                = 1 << 7,
	render_layer_8                = 1 << 8,
	render_layer_9                = 1 << 9,
	render_layer_vfx              = 1 << 10,
	render_layer_all              = 0xFFFF,
	render_layer_all_regular      = render_layer_0 | render_layer_1 | render_layer_2 | render_layer_3 | render_layer_4 | render_layer_5 | render_layer_6 | render_layer_7 | render_layer_8 | render_layer_9,
} render_layer_;
typedef enum app_focus_ {
	app_focus_active,
	app_focus_background,
	app_focus_hidden,
} app_focus_;
typedef enum asset_state_ {
	asset_state_error_unsupported = -3,
	asset_state_error_not_found   = -2,
	asset_state_error             = -1,
	asset_state_none              =  0,
	asset_state_loading,
	asset_state_loaded_meta,
	asset_state_loaded,
} asset_state_;
typedef enum memory_ {
	memory_reference,
	memory_copy,
} memory_;
typedef struct sk_settings_t {
	const char    *app_name;
	const char    *assets_folder;
	display_mode_  display_preference;
	display_blend_ blend_preference;
	bool32_t       no_flatscreen_fallback;
	depth_mode_    depth_mode;
	log_           log_filter;
	bool32_t       overlay_app;
	uint32_t       overlay_priority;
	int32_t        flatscreen_pos_x;
	int32_t        flatscreen_pos_y;
	int32_t        flatscreen_width;
	int32_t        flatscreen_height;
	bool32_t       disable_flatscreen_mr_sim;
	bool32_t       disable_unfocused_sleep;
	void          *android_java_vm;  
	void          *android_activity; 
} sk_settings_t;
typedef struct system_info_t {
	display_       display_type;
	int32_t        display_width;
	int32_t        display_height;
	bool32_t       spatial_bridge_present;
	bool32_t       perception_bridge_present;
	bool32_t       eye_tracking_present;
	bool32_t       overlay_app;
	bool32_t       world_occlusion_present;
	bool32_t       world_raycast_present;
} system_info_t;
SK_API bool32_t      sk_init               (sk_settings_t settings);
SK_API void          sk_set_window         (void *window);
SK_API void          sk_set_window_xam     (void *window);
SK_API void          sk_shutdown           ();
SK_API void          sk_quit               ();
SK_API bool32_t      sk_step               (void (*app_update)(void));
SK_API void          sk_run                (void (*app_update)(void), void (*app_shutdown)(void) sk_default(nullptr));
SK_API void          sk_run_data           (void (*app_update)(void *update_data), void *update_data, void (*app_shutdown)(void *shutdown_data), void *shutdown_data);
SK_API display_mode_ sk_active_display_mode();
SK_API sk_settings_t sk_get_settings       ();
SK_API system_info_t sk_system_info        ();
SK_API const char   *sk_version_name       ();
SK_API uint64_t      sk_version_id         ();
SK_API app_focus_    sk_app_focus          ();
SK_API float         time_getf_unscaled    ();
SK_API double        time_get_unscaled     ();
SK_API float         time_getf             ();
SK_API double        time_get              ();
SK_API float         time_elapsedf_unscaled();
SK_API double        time_elapsed_unscaled ();
SK_API float         time_elapsedf         ();
SK_API double        time_elapsed          ();
SK_API void          time_scale            (double scale);
SK_API void          time_set_time         (double total_seconds, double frame_elapsed_seconds sk_default(0));
typedef struct vec2 {
	float x;
	float y;
} vec2;
typedef struct vec3 {
	float x;
	float y;
	float z;
} vec3;
typedef struct vec4 {
	float x;
	float y;
	float z;
	float w;
} vec4;
typedef struct quat {
	float x;
	float y;
	float z; 
	float w;
} quat;
typedef union matrix {
	vec4 row[4];
	float m[16];
} matrix;
typedef struct rect_t {
	float x;
	float y;
	float w;
	float h;
} rect_t;
typedef struct ray_t {
	vec3 pos;
	vec3 dir;
} ray_t;
typedef struct bounds_t {
	vec3 center;
	vec3 dimensions;
} bounds_t;
typedef struct plane_t {
	vec3  normal;
	float d;
} plane_t;
typedef struct sphere_t {
	vec3  center;
	float radius;
} sphere_t;
typedef struct pose_t {
	vec3 position;
	quat orientation;
} pose_t;
SK_API vec3     vec3_cross                (const sk_ref(vec3) a, const sk_ref(vec3) b);
SK_API quat     quat_difference           (const sk_ref(quat) a, const sk_ref(quat) b);
SK_API quat     quat_lookat               (const sk_ref(vec3) from, const sk_ref(vec3) at);
SK_API quat     quat_lookat_up            (const sk_ref(vec3) from, const sk_ref(vec3) at, const sk_ref(vec3) up);
SK_API quat     quat_from_angles          (float pitch_x_deg, float yaw_y_deg, float roll_z_deg);
SK_API quat     quat_slerp                (const sk_ref(quat) a, const sk_ref(quat) b, float t);
SK_API quat     quat_normalize            (const sk_ref(quat) a);
SK_API quat     quat_inverse              (const sk_ref(quat) a);
SK_API quat     quat_mul                  (const sk_ref(quat) a, const sk_ref(quat) b);
SK_API vec3     quat_mul_vec              (const sk_ref(quat) a, const sk_ref(vec3) b);
SK_API matrix   pose_matrix               (const sk_ref(pose_t) pose, vec3 scale sk_default({1,1,1}));
SK_API void     pose_matrix_out           (const sk_ref(pose_t) pose, sk_ref(matrix) out_result, vec3 scale sk_default({1,1,1}));
SK_API void     matrix_inverse            (const sk_ref(matrix) a, sk_ref(matrix) out_matrix);
SK_API matrix   matrix_invert             (const sk_ref(matrix) a);
SK_API void     matrix_mul                (const sk_ref(matrix) a, const sk_ref(matrix) b, sk_ref(matrix) out_matrix);
SK_API SK_DEPRECATED vec3     matrix_mul_point     (const sk_ref(matrix) transform, const sk_ref(vec3) point);
SK_API SK_DEPRECATED vec4     matrix_mul_point4    (const sk_ref(matrix) transform, const sk_ref(vec4) point);
SK_API SK_DEPRECATED vec3     matrix_mul_direction (const sk_ref(matrix) transform, const sk_ref(vec3) direction);
SK_API SK_DEPRECATED quat     matrix_mul_rotation  (const sk_ref(matrix) transform, const sk_ref(quat) orientation);
SK_API SK_DEPRECATED pose_t   matrix_mul_pose      (const sk_ref(matrix) transform, const sk_ref(pose_t) pose);
SK_API vec3     matrix_transform_pt       (matrix transform, vec3 point);
SK_API vec4     matrix_transform_pt4      (matrix transform, vec4 point);
SK_API vec3     matrix_transform_dir      (matrix transform, vec3 direction);
SK_API ray_t    matrix_transform_ray      (matrix transform, ray_t ray);
SK_API quat     matrix_transform_quat     (matrix transform, quat rotation);
SK_API pose_t   matrix_transform_pose     (matrix transform, pose_t pose);
SK_API vec3     matrix_to_angles          (const sk_ref(matrix) transform);
SK_API matrix   matrix_trs                (const sk_ref(vec3) position, const sk_ref(quat) orientation sk_default({0,0,0,1}), const sk_ref(vec3) scale sk_default({1,1,1}));
SK_API matrix   matrix_t                  (vec3 position);
SK_API matrix   matrix_r                  (quat orientation);
SK_API matrix   matrix_s                  (vec3 scale);
SK_API matrix   matrix_ts                 (vec3 position, vec3 scale);
SK_API void     matrix_trs_out            (sk_ref(matrix) out_result, const sk_ref(vec3) position, const sk_ref(quat) orientation sk_default({0,0,0,1}), const sk_ref(vec3) scale sk_default({1,1,1}));
SK_API matrix   matrix_perspective        (float fov_degrees, float aspect_ratio, float near_clip, float far_clip);
SK_CONST float  m2cm            = 100.f;
SK_CONST float  m2mm            = 1000.f;
SK_API sound_t      sound_generate       (float (*function)(float sample_time), float duration);