LibStereoKit.jl

module LibStereoKit

using CEnum

# 
# Automatically generated file
#
using Pkg.Artifacts

StereoKitC = joinpath(artifact"StereoKitC", "win-x64\\native\\StereoKitC.dll")


const uint64_t = Culonglong

const char16_t = Cushort

const char32_t = Cuint

const bool32_t = Int32

@cenum display_mode_::UInt32 begin
    display_mode_mixedreality = 0
    display_mode_flatscreen = 1
    display_mode_none = 2
end

@cenum depth_mode_::UInt32 begin
    depth_mode_balanced = 0
    depth_mode_d16 = 1
    depth_mode_d32 = 2
    depth_mode_stencil = 3
end

@cenum display_::UInt32 begin
    display_none = 0
    display_opaque = 1
    display_additive = 2
    display_blend = 4
    display_passthrough = 4
    display_any_transparent = 6
end

@cenum display_blend_::UInt32 begin
    display_blend_none = 0
    display_blend_opaque = 1
    display_blend_additive = 2
    display_blend_blend = 4
    display_blend_any_transparent = 6
end

@cenum log_::UInt32 begin
    log_none = 0
    log_diagnostic = 1
    log_inform = 2
    log_warning = 3
    log_error = 4
end

@cenum render_layer_::UInt32 begin
    render_layer_0 = 1
    render_layer_1 = 2
    render_layer_2 = 4
    render_layer_3 = 8
    render_layer_4 = 16
    render_layer_5 = 32
    render_layer_6 = 64
    render_layer_7 = 128
    render_layer_8 = 256
    render_layer_9 = 512
    render_layer_vfx = 1024
    render_layer_all = 65535
    render_layer_all_regular = 1023
end

@cenum app_focus_::UInt32 begin
    app_focus_active = 0
    app_focus_background = 1
    app_focus_hidden = 2
end

@cenum asset_state_::Int32 begin
    asset_state_error_unsupported = -3
    asset_state_error_not_found = -2
    asset_state_error = -1
    asset_state_none = 0
    asset_state_loading = 1
    asset_state_loaded_meta = 2
    asset_state_loaded = 3
end

@cenum memory_::UInt32 begin
    memory_reference = 0
    memory_copy = 1
end

struct sk_settings_t
    app_name::Ptr{Cchar}
    assets_folder::Ptr{Cchar}
    display_preference::display_mode_
    blend_preference::display_blend_
    no_flatscreen_fallback::bool32_t
    depth_mode::depth_mode_
    log_filter::log_
    overlay_app::bool32_t
    overlay_priority::UInt32
    flatscreen_pos_x::Int32
    flatscreen_pos_y::Int32
    flatscreen_width::Int32
    flatscreen_height::Int32
    disable_flatscreen_mr_sim::bool32_t
    disable_unfocused_sleep::bool32_t
    android_java_vm::Ptr{Cvoid}
    android_activity::Ptr{Cvoid}
end

struct system_info_t
    display_type::display_
    display_width::Int32
    display_height::Int32
    spatial_bridge_present::bool32_t
    perception_bridge_present::bool32_t
    eye_tracking_present::bool32_t
    overlay_app::bool32_t
    world_occlusion_present::bool32_t
    world_raycast_present::bool32_t
end

function sk_init(settings)
    @ccall StereoKitC.sk_init(settings::sk_settings_t)::bool32_t
end

function sk_set_window(window)
    @ccall StereoKitC.sk_set_window(window::Ptr{Cvoid})::Cvoid
end

function sk_set_window_xam(window)
    @ccall StereoKitC.sk_set_window_xam(window::Ptr{Cvoid})::Cvoid
end

# no prototype is found for this function at stereokit.h:317:22, please use with caution
function sk_shutdown()
    @ccall StereoKitC.sk_shutdown()::Cvoid
end

# no prototype is found for this function at stereokit.h:318:22, please use with caution
function sk_quit()
    @ccall StereoKitC.sk_quit()::Cvoid
end

function sk_step(app_update)
    @ccall StereoKitC.sk_step(app_update::Ptr{Cvoid})::bool32_t
end

function sk_run(app_update, app_shutdown)
    @ccall StereoKitC.sk_run(app_update::Ptr{Cvoid}, app_shutdown::Ptr{Cvoid})::Cvoid
end

function sk_run_data(app_update, update_data, app_shutdown, shutdown_data)
    @ccall StereoKitC.sk_run_data(app_update::Ptr{Cvoid}, update_data::Ptr{Cvoid}, app_shutdown::Ptr{Cvoid}, shutdown_data::Ptr{Cvoid})::Cvoid
end

# no prototype is found for this function at stereokit.h:322:22, please use with caution
function sk_active_display_mode()
    @ccall StereoKitC.sk_active_display_mode()::display_mode_
end

# no prototype is found for this function at stereokit.h:323:22, please use with caution
function sk_get_settings()
    @ccall StereoKitC.sk_get_settings()::sk_settings_t
end

# no prototype is found for this function at stereokit.h:324:22, please use with caution
function sk_system_info()
    @ccall StereoKitC.sk_system_info()::system_info_t
end

# no prototype is found for this function at stereokit.h:325:22, please use with caution
function sk_version_name()
    @ccall StereoKitC.sk_version_name()::Ptr{Cchar}
end

# no prototype is found for this function at stereokit.h:326:22, please use with caution
function sk_version_id()
    @ccall StereoKitC.sk_version_id()::uint64_t
end

# no prototype is found for this function at stereokit.h:327:22, please use with caution
function sk_app_focus()
    @ccall StereoKitC.sk_app_focus()::app_focus_
end

# no prototype is found for this function at stereokit.h:331:22, please use with caution
function time_getf_unscaled()
    @ccall StereoKitC.time_getf_unscaled()::Cfloat
end

# no prototype is found for this function at stereokit.h:332:22, please use with caution
function time_get_unscaled()
    @ccall StereoKitC.time_get_unscaled()::Cdouble
end

# no prototype is found for this function at stereokit.h:333:22, please use with caution
function time_getf()
    @ccall StereoKitC.time_getf()::Cfloat
end

# no prototype is found for this function at stereokit.h:334:22, please use with caution
function time_get()
    @ccall StereoKitC.time_get()::Cdouble
end

# no prototype is found for this function at stereokit.h:335:22, please use with caution
function time_elapsedf_unscaled()
    @ccall StereoKitC.time_elapsedf_unscaled()::Cfloat
end

# no prototype is found for this function at stereokit.h:336:22, please use with caution
function time_elapsed_unscaled()
    @ccall StereoKitC.time_elapsed_unscaled()::Cdouble
end

# no prototype is found for this function at stereokit.h:337:22, please use with caution
function time_elapsedf()
    @ccall StereoKitC.time_elapsedf()::Cfloat
end

# no prototype is found for this function at stereokit.h:338:22, please use with caution
function time_elapsed()
    @ccall StereoKitC.time_elapsed()::Cdouble
end

function time_scale(scale)
    @ccall StereoKitC.time_scale(scale::Cdouble)::Cvoid
end

function time_set_time(total_seconds, frame_elapsed_seconds)
    @ccall StereoKitC.time_set_time(total_seconds::Cdouble, frame_elapsed_seconds::Cdouble)::Cvoid
end

struct vec2
    x::Cfloat
    y::Cfloat
end

struct vec3
    x::Cfloat
    y::Cfloat
    z::Cfloat
end

struct vec4
    x::Cfloat
    y::Cfloat
    z::Cfloat
    w::Cfloat
end

struct quat
    x::Cfloat
    y::Cfloat
    z::Cfloat
    w::Cfloat
end

struct matrix
    data::NTuple{64, UInt8}
end

function Base.getproperty(x::Ptr{matrix}, f::Symbol)
    f === :row && return Ptr{NTuple{4, vec4}}(x + 0)
    f === :m && return Ptr{NTuple{16, Cfloat}}(x + 0)
    return getfield(x, f)
end

function Base.getproperty(x::matrix, f::Symbol)
    r = Ref{matrix}(x)
    ptr = Base.unsafe_convert(Ptr{matrix}, r)
    fptr = getproperty(ptr, f)
    GC.@preserve r unsafe_load(fptr)
end

function Base.setproperty!(x::Ptr{matrix}, f::Symbol, v)
    unsafe_store!(getproperty(x, f), v)
end

struct rect_t
    x::Cfloat
    y::Cfloat
    w::Cfloat
    h::Cfloat
end

struct ray_t
    pos::vec3
    dir::vec3
end

struct bounds_t
    center::vec3
    dimensions::vec3
end

struct plane_t
    normal::vec3
    d::Cfloat
end

struct sphere_t
    center::vec3
    radius::Cfloat
end

struct pose_t
    position::vec3
    orientation::quat
end

function vec3_cross(a, b)
    @ccall StereoKitC.vec3_cross(a::Ptr{vec3}, b::Ptr{vec3})::vec3
end

function quat_difference(a, b)
    @ccall StereoKitC.quat_difference(a::Ptr{quat}, b::Ptr{quat})::quat
end

function quat_lookat(from, at)
    @ccall StereoKitC.quat_lookat(from::Ptr{vec3}, at::Ptr{vec3})::quat
end

function quat_lookat_up(from, at, up)
    @ccall StereoKitC.quat_lookat_up(from::Ptr{vec3}, at::Ptr{vec3}, up::Ptr{vec3})::quat
end

function quat_from_angles(pitch_x_deg, yaw_y_deg, roll_z_deg)
    @ccall StereoKitC.quat_from_angles(pitch_x_deg::Cfloat, yaw_y_deg::Cfloat, roll_z_deg::Cfloat)::quat
end

function quat_slerp(a, b, t)
    @ccall StereoKitC.quat_slerp(a::Ptr{quat}, b::Ptr{quat}, t::Cfloat)::quat
end

function quat_normalize(a)
    @ccall StereoKitC.quat_normalize(a::Ptr{quat})::quat
end

function quat_inverse(a)
    @ccall StereoKitC.quat_inverse(a::Ptr{quat})::quat
end

function quat_mul(a, b)
    @ccall StereoKitC.quat_mul(a::Ptr{quat}, b::Ptr{quat})::quat
end

function quat_mul_vec(a, b)
    @ccall StereoKitC.quat_mul_vec(a::Ptr{quat}, b::Ptr{vec3})::vec3
end

function pose_matrix(pose, scale)
    @ccall StereoKitC.pose_matrix(pose::Ptr{pose_t}, scale::vec3)::matrix
end

function pose_matrix_out(pose, out_result, scale)
    @ccall StereoKitC.pose_matrix_out(pose::Ptr{pose_t}, out_result::Ptr{matrix}, scale::vec3)::Cvoid
end

function matrix_inverse(a, out_matrix)
    @ccall StereoKitC.matrix_inverse(a::Ptr{matrix}, out_matrix::Ptr{matrix})::Cvoid
end

function matrix_invert(a)
    @ccall StereoKitC.matrix_invert(a::Ptr{matrix})::matrix
end

function matrix_mul(a, b, out_matrix)
    @ccall StereoKitC.matrix_mul(a::Ptr{matrix}, b::Ptr{matrix}, out_matrix::Ptr{matrix})::Cvoid
end

function matrix_mul_point(transform, point)
    @ccall StereoKitC.matrix_mul_point(transform::Ptr{matrix}, point::Ptr{vec3})::vec3
end

function matrix_mul_point4(transform, point)
    @ccall StereoKitC.matrix_mul_point4(transform::Ptr{matrix}, point::Ptr{vec4})::vec4
end

function matrix_mul_direction(transform, direction)
    @ccall StereoKitC.matrix_mul_direction(transform::Ptr{matrix}, direction::Ptr{vec3})::vec3
end

function matrix_mul_rotation(transform, orientation)
    @ccall StereoKitC.matrix_mul_rotation(transform::Ptr{matrix}, orientation::Ptr{quat})::quat
end

function matrix_mul_pose(transform, pose)
    @ccall StereoKitC.matrix_mul_pose(transform::Ptr{matrix}, pose::Ptr{pose_t})::pose_t
end

function matrix_transform_pt(transform, point)
    @ccall StereoKitC.matrix_transform_pt(transform::matrix, point::vec3)::vec3
end

function matrix_transform_pt4(transform, point)
    @ccall StereoKitC.matrix_transform_pt4(transform::matrix, point::vec4)::vec4
end

function matrix_transform_dir(transform, direction)
    @ccall StereoKitC.matrix_transform_dir(transform::matrix, direction::vec3)::vec3
end

function matrix_transform_ray(transform, ray)
    @ccall StereoKitC.matrix_transform_ray(transform::matrix, ray::ray_t)::ray_t
end

function matrix_transform_quat(transform, rotation)
    @ccall StereoKitC.matrix_transform_quat(transform::matrix, rotation::quat)::quat
end

function matrix_transform_pose(transform, pose)
    @ccall StereoKitC.matrix_transform_pose(transform::matrix, pose::pose_t)::pose_t
end

function matrix_to_angles(transform)
    @ccall StereoKitC.matrix_to_angles(transform::Ptr{matrix})::vec3
end

function matrix_trs(position, orientation, scale)
    @ccall StereoKitC.matrix_trs(position::Ptr{vec3}, orientation::Ptr{quat}, scale::Ptr{vec3})::matrix
end

function matrix_t(position)
    @ccall StereoKitC.matrix_t(position::vec3)::matrix
end

function matrix_r(orientation)
    @ccall StereoKitC.matrix_r(orientation::quat)::matrix
end

function matrix_s(scale)
    @ccall StereoKitC.matrix_s(scale::vec3)::matrix
end

function matrix_ts(position, scale)
    @ccall StereoKitC.matrix_ts(position::vec3, scale::vec3)::matrix
end

function matrix_trs_out(out_result, position, orientation, scale)
    @ccall StereoKitC.matrix_trs_out(out_result::Ptr{matrix}, position::Ptr{vec3}, orientation::Ptr{quat}, scale::Ptr{vec3})::Cvoid
end

function matrix_perspective(fov_degrees, aspect_ratio, near_clip, far_clip)
    @ccall StereoKitC.matrix_perspective(fov_degrees::Cfloat, aspect_ratio::Cfloat, near_clip::Cfloat, far_clip::Cfloat)::matrix
end
